--- a/social-links-profile-main/styles/styles.css
+++ b/social-links-profile-main/styles/styles.css
@@ -27,16 +27,18 @@ body {
     color: var(--white);
 }
 
-@media screen and (max-width: 600px) {
-    .container {
-        width: 90%;
+    @media screen and (max-width: 960px) {
+        .container {
+            width: 90%;
+            padding-top: 10%;
+        }
+        
     }
-    
-}
 
 img {
-    width: 100px;
+    width: 160px;
     border-radius: 50%;
+    border: 4px solid var(--green);
     margin-bottom: 10px;
 }
 
@@ -48,6 +50,7 @@ h2 {
 
 .card  {
     text-decoration: none;
+    font-weight: 600;
     color: var(--white);
     background-color: var(--grey700);
     gap: 10px;
